--- a/Farmacologia/farmacologia1.html
+++ b/Farmacologia/farmacologia1.html
@@ -135,7 +135,7 @@
                             Por el momento, solo se tiene el esqueleto con animaciones-->
                     <section class="modal1">
                         <div class="modal_container1">
-                            <div style="height: 5px; background-color: purple; width: 100%;"></div> <!-- Línea morada -->
+                            <div class="linea_med"></div> <!-- Línea morada -->
 
                             <div class="modal_left">
                                 <img src="img/medicamento/Captopril.png" class="modal_img1">
@@ -160,7 +160,13 @@
 
                             </div>
                             <div class="modal_text">
-                                <h2 class="modal_title1"> CAPTOPRIL</h2>                  
+                                
+
+                            <div style="display: flex; align-items: center; justify-content: space-between;">
+                                <!---*dos columnas para poner el botón de cerrar*/ --->
+                                <h2 class="modal_title1" style="margin: 0;">CAPTOPRIL</h2>
+                                <a href="#" class="modal_close1">X</a>
+                            </div>        
                                 <details>
                                     <summary>¿Qué es? </summary><br>
                                     <p class="modal_paragraph1">
@@ -194,10 +200,10 @@
                                     <summary>Interacción</summary>
                                     <p class="modal_paragraph1">
                                     Litio: aumentan los niveles de litio con riesgo de toxicidad. diuréticos ahorradores de potasio, antidepresivos triciclicos/ antipsicóticos, diuréticos, nitroglicerina, vasodilatadores: utilizar con precaución por produce baja de presión arterial. 
-                                    Antiinflamatorios no esteroideos: incremento de los niveles de potasio sérico, disminución de la función renal. 
-                                    Alopurinol,procainamida, agentes citostáticos o inmunosupresores: aumentó el riesgo de reducir los leucocitos. 
-                                    Sinmpaticomiméticos: reducen los efectos antihipertensivos del Captopril. 
-                                    Antidiabéticos : se podrían potenciar los efectos hipoglucemiantes de la insulina y de los medicamentos orales. Probenecid: aumenta los niveles de Captopril por disminución en su depuración . Antiácidos : puede disminuir la absorción gastrointestinal de Captopril.</p>
+                                    <br>Antiinflamatorios no esteroideos: incremento de los niveles de potasio sérico, disminución de la función renal. 
+                                    <br> Alopurinol,procainamida, agentes citostáticos o inmunosupresores: aumentó el riesgo de reducir los leucocitos. 
+                                    <br>Sinmpaticomiméticos: reducen los efectos antihipertensivos del Captopril. 
+                                    <br>Antidiabéticos : se podrían potenciar los efectos hipoglucemiantes de la insulina y de los medicamentos orales. Probenecid: aumenta los niveles de Captopril por disminución en su depuración . Antiácidos : puede disminuir la absorción gastrointestinal de Captopril.</p>
                                 </p>
                                 </details>
                             </div>
@@ -206,9 +212,7 @@
 
 
                         </div>
-
                     </section>
-                    <a href="#" class="modal_close1">X</a>
 
                     <div class="container-fluid col-12 col-md-4 col-lg-4 m-0 ps-2 pt-1">
                         <div class="border zoom"  style="padding: 0; background-color: #fff; transition: transform .2s;"> <!-- Contenedor principal -->
