--- a/Farmacologia/farmacologia1.html
+++ b/Farmacologia/farmacologia1.html
@@ -185,7 +185,7 @@
                             </div>        
                                 <details>
                                     <summary>¿Qué es?
-                                    <div style="height: 3px; background-color: purple; width: 80%;"></div> <!-- Línea morada -->
+                                    <div style="height: 2px; background-color: purple; width: 90%;"></div> <!-- Línea morada -->
                                     
                                     </summary>
 
@@ -353,9 +353,9 @@
                                         <div style="height: 3px; background-color: rgb(45, 70, 214); width: 80%;"></div> <!-- Línea azul -->
                                         </summary>
     
-                                        <p class="modal_paragraph1">
-                                        <li>Metformina: aumenta la concentración plasmática de este medicamento.</li>
-                                        <br><li> DDe manera simultánea con aminoglucósidos puede afectar el funcionamiento renal </li><br>
+                                        <p class="modal_paragraph1"> <!----quitar el <li> con punto, subtitulo con italica -->
+                                        <li>Metformina <br>         Aumenta la concentración plasmática de este medicamento.</li>
+                                        <br><li> De manera simultánea con aminoglucósidos puede afectar el funcionamiento renal </li><br>
                                     </p>
                                     </details>
                                 </div>
