--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- CSS personalizado -->
-    <link rel="stylesheet" href="/css/navbar.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/img/salud-digital-icon.png">
+    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./img/salud-digital-icon.png">
 </head>
 <body>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="navbar.html">
-                <img src="img/salud-digital.png" alt="Logo Izquierdo" class="salud-digital-logo">
+            <a class="navbar-brand d-flex align-items-center" href="./index.html">
+                <img src="./img/salud-digital.png" alt="Logo Izquierdo" class="salud-digital-logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Noticias</a>
+                        <a class="nav-link" href="./html/noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">¿Quiénes Somos?</a>
@@ -38,7 +38,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="#" id="dropdownMenu" aria-haspopup="true" aria-expanded="false">Aplicaciones de Salud</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-                            <li><a class="dropdown-item" href="/html/salud-mental.html">Salud Mental</a></li>
+                            <li><a class="dropdown-item" href="./html/salud-mental.html">Salud Mental</a></li>
                             <li><a class="dropdown-item" href="#">Nutrición</a></li>
                             <li><a class="dropdown-item" href="#">Actividad Física</a></li>
                             <li><a class="dropdown-item" href="#">Aplicacion enfermera</a></li>
@@ -65,8 +65,10 @@
     <!-- aurelio: CONTENEDOR DE INICIO DE PAGINA E IMAGEN PRINCIPAL -->
     <div class="container-fluid p-0">
         <div class="container text-center salud-digital-title">
-            <h1>Bienvenidos a <span style="color: #414BB2;">Salud Digital</span></h1>
-            <p>Desarrollado por prestadores de servicio en CUCEI y el departamento de Salud Digital en CUCS.</p>
+            <p style="font-size: 6.5vh; font-weight: bold;">Bienvenidos a <span style="color: #414BB2;">Salud Digital</span></p>
+            <p style="font-size: 2.5vh;">Digitalizamos el cuidado para el bienestar de la salud humana.</p>
+            <!-- <p>Desarrollado por XXXXX, la Coordinación de Ecosistemas 
+                para el Aprendizaje y la Unidad de Salud Digital en CUCS.</p> -->
         </div>
 
         <div class="image-container">
@@ -83,15 +85,15 @@
                 <!-- Primera fila de noticias -->
                 <div class="row mt-5">
                     <div class="div-notice container-fluid col-12 col-md-4 col-lg-4">
-                        <img src="/img/notices/unesco_notice.jpg" alt="salud-mental" class="img-fluid mb-3 app-salud-img">
+                        <img src="./img/notices/unesco_notice.jpg" alt="salud-mental" class="img-fluid mb-3 app-salud-img">
                         <p class="text-muted" style="font-size: 0.8rem;"><strong style="color: black;">UNESCO: IA en salud: cerrar la brecha entre tecnología y bienestar</strong></p>
                     </div>
                     <div class="div-notice container-fluid col-12 col-md-4 col-lg-4">
-                        <img src="/img/notices/el_economista.jpg" alt="nutricion" class="img-fluid mb-3 app-salud-img">
+                        <img src="./img/notices/el_economista.jpg" alt="nutricion" class="img-fluid mb-3 app-salud-img">
                         <p class="text-muted" style="font-size: 0.8rem;"><strong style="color: black;">Conoce las 5 tendencias que enfrentará el sector salud en 2024.</strong></p>
                     </div>
                     <div class="div-notice container-fluid col-12 col-md-4 col-lg-4">
-                        <img src="/img/notices/el_milenio.jpg" alt="actividad-fisica" class="img-fluid mb-3 app-salud-img">
+                        <img src="./img/notices/el_milenio.jpg" alt="actividad-fisica" class="img-fluid mb-3 app-salud-img">
                         <p class="text-muted" style="font-size: 0.8rem;"><strong style="color: black;">Salud digital, un concepto que se debe integrar como norma a todo hospital o clínica.</strong></p>
                     </div>
                 </div>
@@ -110,7 +112,7 @@
             <div class="container"> <!--border border-primary -->
                 <div class="row align-items-start p-5">
                     <div class="col-md-6 d-flex justify-content-center">
-                        <img src="img/aplicaciones-salud/salud-img.png" alt="Imagen de Salud" class="img-fluid w-100 rounded salud-imagen" style="height: 50%;">
+                        <img src="./img/aplicaciones-salud/salud-img.png" alt="Imagen de Salud" class="img-fluid w-100 rounded salud-imagen" style="height: 50%;">
                     </div>
                 
                     <div class="col-md-6 d-flex flex-column justify-content-start text-salud pt-5">
@@ -148,21 +150,21 @@
 
                 <div class="row mt-5">
                     <div class="div-notice container-fluid col-12 col-md-6 col-lg-3">
-                        <a title="Salud mental" href="/html/salud-mental.html"><img src="img/aplicaciones-salud/salud-mental.png" alt="salud-mental" class="img-fluid mb-3 app-salud-img"></a>
+                        <a title="Salud mental" href="./html/salud-mental.html"><img src="img/aplicaciones-salud/salud-mental.png" alt="salud-mental" class="img-fluid mb-3 app-salud-img"></a>
                         <p class="text-muted" style="font-size: 0.8rem;"><strong style="color: black;">Salud mental.</strong> Esta temporada es importante ya que debemos cuidar...</p>
                         <div class="text-center mt-2 pb-5">
-                            <a href="/html/salud-mental.html" class="text-decoration-none text-primary fw-bold link-hover" style="font-size: 0.7rem;">Más acerca de salud mental &gt;</a>
+                            <a href="./html/salud-mental.html" class="text-decoration-none text-primary fw-bold link-hover" style="font-size: 0.7rem;">Más acerca de salud mental &gt;</a>
                         </div>
                     </div>
                     <div class="div-notice container-fluid col-12 col-md-6 col-lg-3">
-                        <a title="Nutrición" href="/nutricion.html"><img src="img/aplicaciones-salud/nutricion.png" alt="nutricion" class="img-fluid mb-3 app-salud-img"></a>
+                        <a title="Nutrición" href="./nutricion.html"><img src="./img/aplicaciones-salud/nutricion.png" alt="nutricion" class="img-fluid mb-3 app-salud-img"></a>
                         <p class="text-muted" style="font-size: 0.8rem;"><strong style="color: black;">Nutrición.</strong> Esta temporada es importante ya que debemos cuidar...</p>
                         <div class="text-center mt-2 pb-5">
                             <a href="#" class="text-decoration-none text-primary fw-bold link-hover" style="font-size: 0.7rem;">Más acerca de nutrición &gt;</a>
                         </div>
                     </div>
                     <div class="div-notice container-fluid col-12 col-md-6 col-lg-3">
-                        <a title="Actividad física" href="/actividad-fisica.html"><img src="img/aplicaciones-salud/actividad-fisica.png" alt="actividad-fisica" class="img-fluid mb-3 app-salud-img"></a>
+                        <a title="Actividad física" href="./actividad-fisica.html"><img src="img/aplicaciones-salud/actividad-fisica.png" alt="actividad-fisica" class="img-fluid mb-3 app-salud-img"></a>
                         <p class="text-muted" style="font-size: 0.8rem;"><strong style="color: black;">Actividad física.</strong> Durante estos últimos días se ha aprobado una nueva ley para el área de salud.</p>
                         <div class="text-center mt-2 pb-5">
                             <a href="#" class="text-decoration-none text-primary fw-bold link-hover" style="font-size: 0.7rem;">Más acerca de actividad física &gt;</a>
@@ -188,7 +190,7 @@
             <div class="row">
                 <!-- Columna Izquierda -->
                 <div class="col-md-4 text-center text-md-start mb-3">
-                    <img src="img/logo-udg.png" alt="Logo Footer" class="img-fluid mb-3 mt-0" style="width: 100%">
+                    <img src="./img/logo-udg.png" alt="Logo Footer" class="img-fluid mb-3 mt-0" style="width: 100%">
                     <p class="text-muted" style="font-size: 0.9rem;">Centro Universitario de Ciencias de la Salud.<br>
                         Sierra Mojada 950, Col. Independencia, CP. 44340.<br>
                         Guadalajara, Jalisco. México.<br>
@@ -233,6 +235,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- JavaScript personalizado -->
     <!-- <script src="navbar.js"></script> -->
-    <script src="/js/navbar.js"></script>
+    <script src="./js/navbar.js"></script>
 </body>
 </html>
