--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="/index.html">
-                <img src="img/salud-digital.png" alt="Logo Izquierdo" class="salud-digital-logo">
+                <img src="img/salud-digital.png" alt="Logo Izquierdo" class="salud-digital-logo" style="width: 0.9;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
