modal en noticias

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="#">Servicios Bioinformáticos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cursos y Talleres</a>
+                        <a class="nav-link" href="/html/noticias_code.html">Cursos y Talleres</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Inteligencia Artificial</a>
