--- a/html/noticias.html
+++ b/html/noticias.html
@@ -103,7 +103,7 @@
         
         <!-- Sección de Acerca de Microbiología -->
         <div class="container mt-5">
-            <div class="text-center mb-5">
+            <div class="text-center mb-5 border border-dark">
                 <h2 class="fw-bold">Más noticias</h2>
             </div>
             <div class="row gy-4">
