--- a/html/noticias.html
+++ b/html/noticias.html
@@ -15,7 +15,7 @@
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="/index.html">
-                <img src="../img/salud-digital.png" alt="Logo Izquierdo" class="salud-digital-logo">
+                <img src="img/salud-digital.png" alt="Logo Izquierdo" class="salud-digital-logo" style="width: 0.9;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/noticias.html">Noticias</a>
+                        <a class="nav-link" href="/html/noticias_code.html">Noticias</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">¿Quiénes Somos?</a>
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="navbar-logo-right">
-                <img src="../img/logo-cucs.png" alt="Logo Derecho" class="right-logo">
+                <img src="./img/logo-cucs.png" alt="Logo Derecho" class="right-logo">
             </div>
         </div>
     </nav>
