--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/noticias.html">Noticias</a>
+                        <a class="nav-link" href="/html/noticias_code.html">Noticias</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">¿Quiénes Somos?</a>
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="#">Servicios Bioinformáticos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/noticias_code.html">Cursos y Talleres</a>
+                        <a class="nav-link" href="#">Cursos y Talleres</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Inteligencia Artificial</a>
