--- a/html/condiciones/ansiedad.html
+++ b/html/condiciones/ansiedad.html
@@ -15,7 +15,7 @@
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="/index.html">
-                <img src="/img/salud-digital.png" alt="Logo Izquierdo" class="salud-digital-logo" style="width: 0.9;">
+                <img src="/img/salud-digital.png" alt="Logo Izquierdo" class="salud-digital-logo" style="margin-left: 12px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Servicios Bioinformáticos</a>
+                        <a class="nav-link" href="/html/serv-bioinf.html">Servicios Bioinformáticos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Cursos y Talleres</a>
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="navbar-logo-right">
-                <img src="/img/logo-cucs.png" alt="Logo Derecho" class="right-logo">
+                <img src="/img/logo-cucs.png" alt="Logo Derecho" class="right-logo" style="border-radius: 0px; margin-right: 12px; ">
             </div>
         </div>
     </nav>
