--- a/html/bioprueba.html
+++ b/html/bioprueba.html
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/serv-bioinf.html">Servicios Bioinformáticos</a>
+                        <a class="nav-link" href="/html/bioprueba.html">Servicios Bioinformáticos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Cursos y Talleres</a>
@@ -64,14 +64,14 @@
 
     <div class="container-fluid p-0">
         <div class="container text-start salud-digital-title">
-            <h1 style="font-size: 4rem;">Salud <span style="color: #414BB2;">Servicio Bioinformáticos</span></h1>
-            <p style="font-size: 1.3rem;">XDDD.</p>
+            <h1 style="font-size: 4rem;">Servicio <span style="color: #414BB2;"> Bioinformáticos</span></h1>
+            <p style="font-size: 1.3rem;">Descripcion servicios bioinformaticos.</p>
         </div>
     </div>
 
     <!-- chat -->
 
-    <div class="container-fluid p-5 border border-primary">
+    <div class="container-fluid p-5">
         <div id="serviciosBio" class="row justify-content-center align-items-center text-center">
             <!-- Aquí se generarán dinámicamente las tarjetas -->
         </div>
@@ -79,7 +79,7 @@
     
     <!-- mine -->
 
-    <div class="container-fluid p-5 border border-primary">
+    <!-- <div class="container-fluid p-5 border border-primary">
         <div class="row justify-content-center align-items-center text-center">
             <div class="col-lg-6 col-md-6 mb-4">
                 <div class="card shadow h-100 border-0">
@@ -115,6 +115,16 @@
                 </div>
             </div>
         </div>
+    </div> -->
+        <!-- <div class="row justify-content-center align-items-center text-center border border-danger">
+            <div class="col-lg-5 col-md-5 offset-md-1 px-4">
+                Es una técnica computacional que tiene como fin predecir las interacciones a nivel molecular entre moléculas, ya sea entre moléculas pequeñas (ligando) con una proteína blanco (receptor), o bien entre proteínas. Para realizar análisis de acoplamiento molecular es necesario contar con una representación tridimensional de alta resolución de la proteína, así como de los ligandos de interés.
+            </div>
+            <div class="col-lg-5 col-md-6">
+                <img src="/img/bioinf/molecular1.jpg" alt="Imagen de Salud" class="img-fluid shadow-sm" style="max-height: 400px; width: 100%; border-radius: 10px;">
+            </div>
+        </div> -->
+    
         <!-- <div class="row justify-content-center align-items-center text-center">
             <div class="col-lg-6 col-md-6 mb-4">
                 <div class="card shadow h-100 border-0">
