--- a/html/condiciones/ansiedad.html
+++ b/html/condiciones/ansiedad.html
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/serv-bioinf.html">Servicios Bioinformáticos</a>
+                        <a class="nav-link" href="/html/bioprueba.html">Servicios Bioinformáticos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Cursos y Talleres</a>
@@ -175,10 +175,10 @@
             <div class="container-fluid text-center mt-5">
                 <!-- Barra de botones -->
                 <div class="btn-group" role="group" aria-label="Niveles">
-                  <button class="btn btn-custom-leve mx-5 rounded shadow" onclick="changeContent('leve', 'ansiedad')">Leve</button>
-                  <button class="btn btn-custom-moderado mx-5 rounded shadow" onclick="changeContent('moderado', 'ansiedad')">Moderado</button>
-                  <button class="btn btn-outline-danger mx-5 rounded shadow" onclick="changeContent('severo', 'ansiedad')">Severo</button>
-                  <button class="btn btn-custom-muysevero mx-5 rounded shadow" onclick="changeContent('muySevero', 'ansiedad')">Muy severo</button>
+                  <button class="btn btn-custom-leve mx-5 rounded shadow w-100" onclick="changeContent('leve', 'ansiedad')">Leve</button>
+                  <button class="btn btn-custom-moderado mx-5 rounded shadow w-100" onclick="changeContent('moderado', 'ansiedad')">Moderado</button>
+                  <button class="btn btn-custom-severo btn-outline-danger mx-5 rounded shadow w-100" onclick="changeContent('severo', 'ansiedad')">Severo</button>
+                  <button class="btn btn-custom-muysevero mx-5 rounded shadow w-100" onclick="changeContent('muySevero', 'ansiedad')">Muy severo</button>
                 </div>
               
                 <!-- Contenido dinámico -->
