--- a/html/condiciones/depresion.html
+++ b/html/condiciones/depresion.html
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/serv-bioinf.html">Servicios Bioinformáticos</a>
+                        <a class="nav-link" href="/html/bioprueba.html">Servicios Bioinformáticos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Cursos y Talleres</a>
