--- a/html/noticias_code.html
+++ b/html/noticias_code.html
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/serv-bioinf.html">Servicios Bioinformáticos</a>
+                        <a class="nav-link" href="/html/bioprueba.html">Servicios Bioinformáticos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Cursos y Talleres</a>
@@ -70,7 +70,7 @@
                 <!-- <p class="text-muted" style="font-size: 3.2vh; margin-top: -15px;">Lo que ha ocurrido actualmente</p> -->
             </div>
             
-            <div class="mt-5 p-2 border border-danger">
+            <div class="mt-5 p-2">
                 <div class="row">
                     <!-- Noticias Laterales Izquierdas -->
                     <div class="col-lg-3 col-md-6 d-flex flex-column gap-3">
