Salud Mental con imagenes

--- a/html/salud-mental.html
+++ b/html/salud-mental.html
@@ -101,7 +101,7 @@
                     <h1 class="fw-bold title-smental">Depresión</h1>
                     <!-- <p class="fs-4">Conoce nuestro departamento de salud.</p> -->
                     <p class="text-muted descr-smental">
-                        La depresión es una condición mental que se diferencia de los cambios normales en el estado de ánimo y los sentimientos cotidianos. Afecta todos los aspectos de la vida, incluyendo las relaciones familiares, amistades y la comunidad.
+                        La depresión es un trastorno del estado de ánimo caracterizado por una tristeza persistente y pérdida de interés en actividades que antes resultaban agradables. La depresión puede afectar tanto el estado físico como la salud.
                     </p>
                     <a href="/html/condiciones/depresion.html" class="btn btn-outline-dark mt-4 col-sm-4">
                         Leer más
@@ -126,7 +126,7 @@
                     <h1 class="fw-bold title-smental">Estrés</h1>
                     <!-- <p class="fs-4">Conoce nuestro departamento de salud.</p> -->
                     <p class="text-muted descr-smental">
-                        El estrés es un conjunto de reacciones físicas y mentales que experimenta una persona al enfrentarse a factores externos que superan su capacidad de respuesta. Se manifiesta como una reacción natural del organismo ante situaciones que se perciben como amenazantes o demandantes.
+                        El estrés es una respuesta generalizada tras la exposición de actividades o situaciones ya sea de forma personal, social y ecológica que ponen en alerta al individuo a largo de la vida.
                     </p>
                     <a href="/html/condiciones/estres.html" class="btn btn-outline-dark mt-4 col-sm-4">
                         Leer más
