Telemedicina, Noticias y Bioinf

--- a/html/condiciones/ansiedad.html
+++ b/html/condiciones/ansiedad.html
@@ -31,7 +31,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="#" id="dropdownMenu" aria-haspopup="true" aria-expanded="false">Salud</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-                            <li><a class="dropdown-item" href="#">Telemedicina</a></li>
+                            <li><a class="dropdown-item" href="/html/telemedicina.html">Telemedicina</a></li>
                             <li><a class="dropdown-item" href="#">Farmacología</a></li>
                         </ul>
                     </li>
