--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="#" id="dropdownMenu" aria-haspopup="true" aria-expanded="false">Salud</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-                            <li><a class="dropdown-item" href="#">Telemedicina</a></li>
+                            <li><a class="dropdown-item" href="/html/telemedicina.html">Telemedicina</a></li>
                             <li><a class="dropdown-item" href="#">Farmacología</a></li>
                         </ul>
                     </li>
@@ -108,15 +108,15 @@
         <div class="container-fluid cont-appsalud" style="background-color: #fff;">
 
             <div class="container"> <!--border border-primary -->
-                <div class="row align-items-start p-5">
+                <div class="row align-items-start p-3">
                     <div class="col-md-6 d-flex justify-content-center">
                         <img src="img/aplicaciones-salud/salud-img.png" alt="Imagen de Salud" class="img-fluid w-100 rounded salud-imagen" style="height: 50%;">
                     </div>
                 
                     <div class="col-md-6 d-flex flex-column justify-content-start text-salud pt-5">
                         <p class="fw-bold" style="font-size: 2.5rem;">Salud</p>
-                        <p class="fs-4" style="font-size: 2rem;">Conoce nuestro departamento de salud.</p>
-                        <p class="text-muted" style="font-size: 1.3rem;">
+                        <p class="fs-4" style="font-size: 1.6rem;">Conoce nuestro departamento de salud.</p>
+                        <p class="text-muted" style="font-size: 1rem;">
                             Feugiat. Himenaeos iaculis laoreet torquent ad sed cras, facilisi gravida auctor sociis rutrum class dui, sapien luctus lacus in venenatis.<br>
                             Feugiat. Himenaeos iaculis laoreet torquent ad sed cras, facilisi gravida auctor sociis rutrum class dui, sapien luctus lacus in venenatis. <br>
                             Feugiat. Himenaeos iaculis laoreet torquent ad sed cras, facilisi gravida auctor sociis rutrum class dui, sapien luctus lacus in venenatis
@@ -136,10 +136,9 @@
                 <div class="row  p-5">
                     <div class="container" style="padding-top: 3rem;">
                         <h1 class="text-center fw-bold">Aplicaciones de la salud.</h1>
-                        <p class="text-center" style="font-size: 1.2rem;">
+                        <p class="text-center" style="font-size: 1rem;">
                             Feugiat. Himenaeos iaculis laoreet torquent ad sed cras, facilisi gravida auctor sociis rutrum class dui.<br>
-                            Feugiat. Himenaeos iaculis laoreet torquent ad sed cras. <br>
-                            Iaculis laoreet, facilisi gravida auctor sociis rutrum class dui, sapien luctus lacus in venenatis
+                            Feugiat. Himenaeos iaculis laoreet torquent ad sed cras. Iaculis laoreet, facilisi gravida auctor sociis rutrum class dui, sapien luctus lacus in venenatis
                         </p>
                 
                 </div>
